--- a/src/jobs.scss
+++ b/src/jobs.scss
@@ -3,6 +3,10 @@
         background-color: #ECF9FF;
         padding: 20px 0;
 
+        .labelTitle {
+            font-size: 1.5em;
+            color: black;
+        }
         .custom-radio input {
             opacity: 0;
             position: fixed;
@@ -16,7 +20,7 @@
             border: 1px solid lightgray;
             border-radius: 10px;
         }
-        input:checked + label, label:hover {
+        input:checked + label, input + label:hover {
             background: #58abad;
             color: white;
         }
@@ -39,6 +43,10 @@
     }
 
     #description {
-        padding: 1vh 0;
+        margin: 1vh 0;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical; 
+        -webkit-line-clamp: 3;
     }
 }
