--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 .navbar {
-  background-color: #61dafb;
+  background-color: #001f3f;
   /*margin-bottom: 3em;*/
 }
 
@@ -47,8 +47,8 @@
   size: 5rem;
 }
 
-.nav-link {
-  color: green;
+.nav-item-color {
+  color: white !important;
 }
 
 .modalLogin {
@@ -62,6 +62,10 @@
   border-radius: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.signup-button {
+  background-color: #001f3f;
 }
  .push {
   height: 50px;
@@ -85,38 +89,52 @@
   padding-right: 0;
 }
 
+#footer {
+  background-color: #001f3f;
+  margin-top: 1rem;
+  padding: 1rem;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.footer-items {
+  color: white;
+}
+
+a:link {
+  color: white;
+}
+
+a:visited {
+  color: white;
+}
+
+a:hover {
+  color: white;
+}
+
+.backgroundimage {
+  background-image: url("../src/images/job-banner.jpg");
+  width: 100vw;
+  height: 60vh; 
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  position: relative;
+  border: 2px solid #001f3f ;
+}
+
 .top-left {
   position: absolute;
-  top: 8px;
+  top: 50px;
   left: 16px;
+  font-family: 'Libre Baskerville', serif;
+  font-size: larger;
 }
 
-.top-right {
-  position: absolute;
-  top: 8px;
-  right: 16px;
-  color: red
-}
-
-.bottom-right {
-  position: absolute;
-  bottom: 8px;
-  right: 16px;
-}
-
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.image-text {
-  z-index: 100;
-  position: absolute;
-  color: red;
-  font-size: 24px;
-  font-weight: bold;
-  left: 150px;
-  top: 350px;
+.home-p {
+  font-size: large;
+  text-align: center;
+  
 }
