--- a/src/profile.scss
+++ b/src/profile.scss
@@ -1,8 +1,8 @@
 .profile {
 
-    margin-top: 3em;
+    margin-top: 2em;
 
-    .experiencesSection, .educationSection, .aboutSection {
+    .experiencesSection, .educationSection, .aboutSection,.skillsSection {
         background-color: #EBF6FF;
         margin: 1vh 15vw;
         border-radius: 5px;
@@ -17,19 +17,8 @@
         color: white;
     }
 
-    @media only screen and (max-width: 600px) {
-        .experiencesSection, .educationSection, .aboutSection {
-            margin: 1vh;
-        }
-
-        .experience {
-            padding-left: 4vw;
-            padding-right: 4vw;
-        }
-    }
-
-    .experience {
-        padding: 0 3em 0;
+    .experience,.education {
+        padding: 0 4em;
 
         .row div {
             padding-left: 0 !important;
@@ -47,8 +36,8 @@
             content: "";
             display: block;
             margin: 0 auto;
-            width: 85%;
-            border-bottom: 1px solid gray;
+            width: 90%;
+            border-bottom: 1px solid lightgray;
         }
     }
 
@@ -64,7 +53,6 @@
         }
 
         h2:last-child, div:last-child { 
-            margin-left: auto; 
             margin-bottom: auto;
         }
 
@@ -74,7 +62,36 @@
 
         i {
             font-size: 24px;
+            cursor: pointer;
         }
     }
 
+    i {
+        font-size: 20px;
+        cursor: pointer;
+    }
+
+    @media only screen and (max-width: 600px) {
+
+        margin-top: 0em;
+
+        .experiencesSection, .educationSection, .aboutSection, .skillsSection {
+            margin: 4vh 2vh;
+        }
+
+        .experience, .education {
+            padding: 0 1em;
+        }
+    }
+
+}
+
+.center-modal {
+    display: flex !important;
+    align-items: center;
+
+    .modal-dialog {
+        max-width: 800px !important;
+        width: 700px;
+    }
 }
