profile about color change

--- a/src/profile.scss
+++ b/src/profile.scss
@@ -13,8 +13,9 @@
     .aboutSection {
         margin-bottom: 2em;
         border-radius: 0;
-        background-color: #003D7A;
-        color: white;
+        background-color: skyblue;
+        //background-color: gray;
+        color: black;
     }
 
     .experience,.education {
